--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -24,6 +24,10 @@
     "translation": "API URL to target"
   },
   {
+    "id": "API version",
+    "translation": ""
+  },
+  {
     "id": "All available CLI commands",
     "translation": "All available CLI commands"
   },
@@ -1126,6 +1130,10 @@
   {
     "id": "Usage:",
     "translation": "Usage:"
+  },
+  {
+    "id": "Warning: Insecure http API endpoint detected: secure https API endpoints are recommended",
+    "translation": ""
   },
   {
     "id": "Windows PowerShell",
