--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -28,6 +28,10 @@
     "translation": "API URL to target"
   },
   {
+    "id": "API version",
+    "translation": ""
+  },
+  {
     "id": "APPS",
     "translation": "APPS"
   },
@@ -1598,6 +1602,10 @@
   {
     "id": "Version",
     "translation": "Version"
+  },
+  {
+    "id": "Warning: Insecure http API endpoint detected: secure https API endpoints are recommended",
+    "translation": ""
   },
   {
     "id": "Windows PowerShell",
