--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -3212,6 +3212,10 @@
     "translation": "Utilizzo non corretto. Richiede {{.Arguments}}"
   },
   {
+    "id": "Incorrect Usage. The push command requires an app name. The app name can be supplied as an argument or with a manifest.yml file.",
+    "translation": "Il file manifest non è stato trovato nella directory corrente, fornisci un nome applicazione o un manifest"
+  },
+  {
     "id": "Incorrect Usage:",
     "translation": "Utilizzo non corretto:"
   },
@@ -3514,10 +3518,6 @@
   {
     "id": "Manifest file created successfully at ",
     "translation": "File manifest creato correttamente in "
-  },
-  {
-    "id": "Manifest file is not found in the current directory, please provide either an app name or manifest",
-    "translation": "Il file manifest non è stato trovato nella directory corrente, fornisci un nome applicazione o un manifest"
   },
   {
     "id": "Map a TCP route",
