--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -3212,6 +3212,10 @@
     "translation": "誤った使用法。 {{.Arguments}} が必要"
   },
   {
+    "id": "Incorrect Usage. The push command requires an app name. The app name can be supplied as an argument or with a manifest.yml file.",
+    "translation": "現行ディレクトリーにマニフェスト・ファイルが見つかりません、アプリ名またはマニフェストのいずれかを指定してください"
+  },
+  {
     "id": "Incorrect Usage:",
     "translation": "誤った使用法:"
   },
@@ -3514,10 +3518,6 @@
   {
     "id": "Manifest file created successfully at ",
     "translation": "次の場所にマニフェスト・ファイルが正常に作成されました: "
-  },
-  {
-    "id": "Manifest file is not found in the current directory, please provide either an app name or manifest",
-    "translation": "現行ディレクトリーにマニフェスト・ファイルが見つかりません、アプリ名またはマニフェストのいずれかを指定してください"
   },
   {
     "id": "Map a TCP route",
