add options to cf space usage
[finish #125115361]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -1284,6 +1284,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME space SPACE [--guid] [--security-group-rules]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME space-quota SPACE_QUOTA_NAME",
     "translation": ""
   },
