--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -788,6 +788,10 @@
     "translation": "CF_NAME space SPACE"
   },
   {
+    "id": "CF_NAME space SPACE [--guid] [--security-group-rules]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME space-quota SPACE_QUOTA_NAME",
     "translation": "CF_NAME space-quota SPACE_QUOTA_NAME"
   },
