add options to cf org usage
[finish #125115341]

Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -1048,6 +1048,10 @@
     "translation": "CF_NAME org ORG"
   },
   {
+    "id": "CF_NAME org ORG [--guid]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME org-users ORG",
     "translation": "CF_NAME org-users ORG"
   },
