--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -564,6 +564,10 @@
     "translation": "CF_NAME org ORG"
   },
   {
+    "id": "CF_NAME org ORG [--guid]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME org-users ORG",
     "translation": "CF_NAME org-users ORG"
   },
