--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -348,6 +348,10 @@
     "translation": "CF_NAME org ORG"
   },
   {
+    "id": "CF_NAME org ORG [--guid]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME org-users ORG",
     "translation": "CF_NAME org-users ORG"
   },
