--- a/cf/i18n/resources/zh-hant.untranslated.json
+++ b/cf/i18n/resources/zh-hant.untranslated.json
@@ -544,6 +544,10 @@
     "translation": "CF_NAME org ORG"
   },
   {
+    "id": "CF_NAME org ORG [--guid]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME org-users ORG",
     "translation": "CF_NAME org-users ORG"
   },
