add options to cf plugins usage
[finish #128565893]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -1068,6 +1068,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME plugins [--checksum]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME purge-service-instance SERVICE_INSTANCE",
     "translation": "CF_NAME purge-service-instance INSTANCE_SERVICE"
   },
