--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -584,6 +584,10 @@
     "translation": "CF_NAME plugins"
   },
   {
+    "id": "CF_NAME plugins [--checksum]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME purge-service-instance SERVICE_INSTANCE",
     "translation": "CF_NAME purge-service-instance SERVICE_INSTANCE"
   },
