--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -564,6 +564,10 @@
     "translation": "CF_NAME plugins"
   },
   {
+    "id": "CF_NAME plugins [--checksum]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME purge-service-instance SERVICE_INSTANCE",
     "translation": "CF_NAME purge-service-instance SERVICE_INSTANCE"
   },
