Add the results of bin/test i18n translation resource updates
Signed-off-by: Jesse Alford <Jesse.T.Alford@gmail.com>

--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -872,6 +872,14 @@
     "translation": "CF_NAME delete-space SPACE [-f]"
   },
   {
+    "id": "CF_NAME delete-space SPACE [-o]",
+    "translation": ""
+  },
+  {
+    "id": "CF_NAME delete-space SPACE [-o] [-f]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME delete-space-quota SPACE-QUOTA-NAME [-f]",
     "translation": "CF_NAME delete-space-quota SPACE-QUOTA-NAME [-f]"
   },
@@ -2046,6 +2054,14 @@
   {
     "id": "Delete cancelled",
     "translation": "Delete cancelled"
+  },
+  {
+    "id": "Delete space within specifid org",
+    "translation": ""
+  },
+  {
+    "id": "Delete space within specified org",
+    "translation": ""
   },
   {
     "id": "Deletes a security group",
