--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -872,6 +872,14 @@
     "translation": "CF_NAME delete-space ESPACE [-f]"
   },
   {
+    "id": "CF_NAME delete-space SPACE [-o]",
+    "translation": ""
+  },
+  {
+    "id": "CF_NAME delete-space SPACE [-o] [-f]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME delete-space-quota SPACE-QUOTA-NAME [-f]",
     "translation": "CF_NAME delete-space-quota NOM_QUOTA_ESPACE [-f]"
   },
@@ -2046,6 +2054,14 @@
   {
     "id": "Delete cancelled",
     "translation": "Suppression annulée"
+  },
+  {
+    "id": "Delete space within specifid org",
+    "translation": ""
+  },
+  {
+    "id": "Delete space within specified org",
+    "translation": ""
   },
   {
     "id": "Deletes a security group",
