--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -868,6 +868,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME delete-space SPACE [-o] ORG [-f]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME delete-space SPACE [-o] [-f]",
     "translation": ""
   },
@@ -2046,10 +2050,6 @@
   {
     "id": "Delete cancelled",
     "translation": "Löschen wurde abgebrochen"
-  },
-  {
-    "id": "Delete space within specifid org",
-    "translation": ""
   },
   {
     "id": "Delete space within specified org",
