--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -392,8 +392,8 @@
     "translation": "CF_NAME delete-shared-domain DOMAIN [-f]"
   },
   {
-    "id": "CF_NAME delete-space SPACE [-o] ORG [-f]",
-    "translation": "CF_NAME delete-space SPACE [-o] ORG [-f]"
+    "id": "CF_NAME delete-space SPACE [-o ORG] [-f]",
+    "translation": "CF_NAME delete-space SPACE [-o ORG] [-f]"
   },
   {
     "id": "CF_NAME delete-space SPACE [-o] [-f]",
