--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -256,8 +256,8 @@
     "translation": "CF_NAME delete-service-key mydb mykey"
   },
   {
-    "id": "CF_NAME delete-space SPACE [-o] ORG [-f]",
-    "translation": "CF_NAME delete-space SPACE [-o] ORG [-f]"
+    "id": "CF_NAME delete-space SPACE [-o ORG] [-f]",
+    "translation": "CF_NAME delete-space SPACE [-o ORG] [-f]"
   },
   {
     "id": "CF_NAME delete-space SPACE [-o] [-f]",
