--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -868,7 +868,7 @@
     "translation": ""
   },
   {
-    "id": "CF_NAME delete-space SPACE [-o] ORG [-f]",
+    "id": "CF_NAME delete-space SPACE [-o ORG] [-f]",
     "translation": ""
   },
   {
