adds environment variables section to the help command
[finish #126917239]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -2240,6 +2240,10 @@
     "translation": "UMGEBUNGSVARIABLEN:"
   },
   {
+    "id": "ENVIRONMENT:",
+    "translation": ""
+  },
+  {
     "id": "EXAMPLES",
     "translation": "BEISPIELE"
   },
