--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -2240,6 +2240,10 @@
     "translation": "VARIABLES D'ENVIRONNEMENT :"
   },
   {
+    "id": "ENVIRONMENT:",
+    "translation": ""
+  },
+  {
     "id": "EXAMPLES",
     "translation": "EXEMPLES"
   },
