--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -2240,6 +2240,10 @@
     "translation": "VARIÁVEIS DE AMBIENTE:"
   },
   {
+    "id": "ENVIRONMENT:",
+    "translation": ""
+  },
+  {
     "id": "EXAMPLES",
     "translation": "EXEMPLOS"
   },
